// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader results when a loader returns not found sends a not found page 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>User _why not found</title>
    <meta name=\\"description\\" content=\\"View all of the gists from _why\\" />
    <link
      rel=\\"stylesheet\\"
      href=\\"//unpkg.com/@exampledev/new.css@1.1.3/new.css\\"
    />
    <link rel=\\"stylesheet\\" href=\\"/build/global-ec887178.css\\" />
    <link rel=\\"stylesheet\\" href=\\"/build/routes/gists-a6d2a823.css\\" />
  </head>
  <body class=\\"m-4\\">
    <div data-test-id=\\"/gists\\">
      <header>
        <h1>Gists</h1>
        <ul>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/ryanflorence\\"
              >Ryan Florence<!-- -->
            </a>
          </li>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/mjackson\\"
              >Michael Jackson<!-- -->
            </a>
          </li>
        </ul>
      </header>
      <div data-test-id=\\"/gists/$username\\">
        <h2>
          No gists for
          <!-- -->_why
        </h2>
      </div>
      <div>I am shared</div>
    </div>
    <script>
      window.__remixContext = {
        globalData: { enableScripts: true },
        manifest: {
          assets: {
            \\"entry-browser\\": { file: \\"entry-browser-284a45d2.js\\" },
            \\"global.css\\": { file: \\"global-ec887178.css\\" },
            \\"routes/gists\\": { file: \\"routes/gists-46a1683e.js\\" },
            \\"routes/gists/$username\\": {
              file: \\"routes/gists/$username-2db4e8d4.js\\",
            },
            \\"routes/gists.css\\": { file: \\"routes/gists-a6d2a823.css\\" },
          },
          routes: {
            \\"routes/gists\\": {
              id: \\"routes/gists\\",
              path: \\"gists\\",
              hasLoader: true,
            },
            \\"routes/gists/$username\\": {
              id: \\"routes/gists/$username\\",
              path: \\":username\\",
              hasLoader: true,
              parentId: \\"routes/gists\\",
            },
          },
          version: \\"73c7418a\\",
        },
        matches: [
          {
            params: {},
            pathname: \\"/gists\\",
            route: { id: \\"routes/gists\\", path: \\"gists\\", hasLoader: true },
          },
          {
            params: { username: \\"_why\\" },
            pathname: \\"/gists/_why\\",
            route: {
              id: \\"routes/gists/$username\\",
              path: \\":username\\",
              hasLoader: true,
              parentId: \\"routes/gists\\",
            },
          },
        ],
        publicPath: \\"/build/\\",
        routeData: {
          \\"routes/gists\\": {
            users: [
              { id: \\"ryanflorence\\", name: \\"Ryan Florence\\" },
              { id: \\"mjackson\\", name: \\"Michael Jackson\\" },
            ],
          },
          \\"routes/gists/$username\\": null,
        },
      };
    </script>
    <script type=\\"module\\">
      import * as route0 from \\"/build/routes/gists-46a1683e.js\\";
      import * as route1 from \\"/build/routes/gists/$username-2db4e8d4.js\\";
      window.__remixContext.routeModules = {
        \\"routes/gists\\": route0,
        \\"routes/gists/$username\\": route1,
      };
    </script>
    <script src=\\"/build/entry-browser-284a45d2.js\\" type=\\"module\\"></script>
  </body>
</html>
"
`;

exports[`loader results when the loader has an error sends a server error page 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>Error</title>
    <link
      rel=\\"stylesheet\\"
      href=\\"//unpkg.com/@exampledev/new.css@1.1.3/new.css\\"
    />
    <link rel=\\"stylesheet\\" href=\\"/build/global-ec887178.css\\" />
  </head>
  <body class=\\"m-4\\">
    <div data-test-id=\\"errors/500\\"><h1>500</h1></div>
    <script>
      window.__remixContext = {
        globalData: { enableScripts: true },
        manifest: {
          assets: {
            \\"entry-browser\\": { file: \\"entry-browser-284a45d2.js\\" },
            \\"global.css\\": { file: \\"global-ec887178.css\\" },
            \\"routes/500\\": { file: \\"routes/500-a7234038.js\\" },
          },
          routes: { \\"routes/500\\": { id: \\"routes/500\\", path: \\"/gists/DANGER\\" } },
          version: \\"73c7418a\\",
        },
        matches: [
          {
            params: {},
            pathname: \\"/gists/DANGER\\",
            route: { id: \\"routes/500\\", path: \\"/gists/DANGER\\" },
          },
        ],
        publicPath: \\"/build/\\",
        routeData: {
          \\"routes/500\\": {
            users: [
              { id: \\"ryanflorence\\", name: \\"Ryan Florence\\" },
              { id: \\"mjackson\\", name: \\"Michael Jackson\\" },
            ],
          },
        },
      };
    </script>
    <script type=\\"module\\">
      import * as route0 from \\"/build/routes/500-a7234038.js\\";
      window.__remixContext.routeModules = { \\"routes/500\\": route0 };
    </script>
    <script src=\\"/build/entry-browser-284a45d2.js\\" type=\\"module\\"></script>
  </body>
</html>
"
`;
